# hydrobayescal

./: .gitignore  .~lock.tm-user-input_parameters.xlsx#  .~lock.user-input-use-case.xlsx#  .~lock.user_input.xlsx#  CONTRIBUTING.md  DEADJOE  ExportedItems.bib  HBCenv_requirements.txt  HydroBayesCal-requirements.txt  LICENSE  README.md  activate_HBC_Telemac.py  assess_calibration.py  bal.py  bal_openfoam.py  bal_telemac.py  bal_template.py  calibration-points.csv  config.py  config_OpenFOAM.py  config_Telemac.py  environment.yml  global_config.py  load_tm_env.sh  log_functions.py  main_gpe.py  main_gpr_telemac.py  main_plots.py  main_validate.py  mpi.err  mpi.out  prebal_telemac_error_analysis.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_launcher.py  setup.py  telemac.sourcei.sh  telemac_coupling.py  telemac_extract.py  (+14 more)
HBCenv/: req-HBCenv.txt
HBCenv_Py3.10/: pyvenv.cfg  requirements.txt
HBCenvpy3.8/: pyvenv.cfg  req-HBCenv.txt
HyBayesCal/: __init__.py  bayesian_gpe.py  bayesian_gpe_orig.py  file_creator.py  function_pool.py  requirements.txt  spielwiese.py
NOUSE-test-data/: user-input-use-case.xlsx
UML/: BayesCal-UML.tex  BayesCal-UML.txss2  pgf-umlcd-manual.tex  pgf-umlcd-manual.toc  pgf-umlcd.sty  tikzlibraryumlcd.code.tex
analytical_model/: main_gpr.py
coding_test/: conf.py  index.rst
delete-candidates/: control_telemac-pysource-loads-notworking.py  env_utils.py  upstream-user-input.xlsx  user-input-use-case-20230213.xlsx
docs/: .readthedocs.yaml  background.rst  codedocs.rst  conf.py  conf_full_example.py  create-tm-model-oldstyle.rst  create-tm-model.rst  example-yuba.rst  gpe-bal-telemac.rst  index.rst  installation.rst  introduction.rst  license.rst  multiple_times.rst  readme.rst  references.rst  requirements-docs.txt  uml.rst  usage-delft3d.rst  usage-openfoam.rst  usage-telemac.rst  usage.rst  use-cases.rst  workflow.rst
env-scripts/: DELETE_ME_activateHBCtelemacPy3.10.sh  activateHBCtelemac.bat  activateHBCtelemac.sh  activateHBCtelemacWindows.ps1  readme-windows.md
examples/: .~lock.location.csv#  assess_calibration.py  bal_telemac.py  bal_telemac_2quantities.py  bal_telemac_bvr.py  complete_bal.sh  ering_assess_calibration.py  ering_plotting.py  error_evaluation.py  extract_xyz.py  flux_convergence.py  hydrographs.py  main_BAL_GP.py  main_extraction.py  main_plots.py  main_validate.py  measurements_VITESSE_WDEPTH_filtered.csv  mu_classification.py  parameter_file_verification.xlsx  physical_model.py  rasterize.py  stochastic_calibration_Mouris.py  telemac_runs.py  vtk2SLF.py
simulation2xxxx/: initial-run-parameters-all.csv  parameter-file.csv  run_launcher.py  t2d_weirs-1.cas  t2d_weirs-2.cas  t2d_weirs-3.cas  t2d_weirs-4.cas  t2d_weirs-5.cas
simulationxxx/: initial-run-parameters-all.csv  parameter-file.csv  run_launcher.py  t2d-donau-1.cas  t2d-donau-2.cas  t2d-donau-3.cas  t2d-donau-4.cas  t2d-donau.cas
stochastic_calibration/: BAL_core.py  GPE_BAL_telemac.py  __init__.py  active_learning.py  basic_functions.py  bayesian_gpe.py  config.py  config_BASICS.py  config_TELEMAC.py  config_logging.py  control_BASIC_MODEL.py  control_TELEMAC.py  function_pool.py  selafin_io_pp.py  spielwiese.py  surrogate.py  telemac_core.py  user-input.xlsx  usr_defs.py  usr_defs_TELEMAC.py
stochastic_surrogate/: BAL_fun.py  GPE_BAL_telemac.py  __init__.py  config.py  run_multiple_telemac.py  spielwiese.py  surrogate.py  telemac_fun.py  user-input.xlsx  (+1 more)
(+287 files in other folders)
